--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,5 @@
 /* Components */
 @import 'components/Image.css';
 @import 'components/Text.css';
+@import 'components/Grid.css';
+@import 'components/Stack.css';
