--- a/css/lib/variables.css
+++ b/css/lib/variables.css
@@ -5,13 +5,13 @@
   
   /* Scale */
   --ratio: 1.25;
-  ---s5: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
-  ---s4: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
-  ---s3: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
-  ---s2: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
-  ---s1: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio));
+  --s-5: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
+  --s-4: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
+  --s-3: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
+  --s-2: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio) / var(--ratio));
+  --s-1: calc(1rem * var(--ratio) / var(--ratio) / var(--ratio));
    --s0: 1rem;
-   --none: 0;
+   --sNone: 0;
    --s1: calc(1rem * var(--ratio));
    --s2: calc(1rem * var(--ratio) * var(--ratio));
    --s3: calc(1rem * var(--ratio) * var(--ratio) * var(--ratio));
@@ -26,5 +26,8 @@
    /* Border widths */
    --border-thin: 3px;
    --border-thick: 6px;
+
+   /* Outline (focus) style */
+   --outline: 2px solid;
 }
 
