--- a/css/styles.css
+++ b/css/styles.css
@@ -9,4 +9,6 @@
 @import 'components/Box.css';
 @import 'components/Grid.css';
 @import 'components/Stack.css';
+@import 'components/Spread.css';
+@import 'components/Center.css';
 @import 'components/Comment.css';
