--- a/css/lib/base.css
+++ b/css/lib/base.css
@@ -10,6 +10,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: inherit;
+  background-color: inherit;
   box-sizing: border-box;
 }
 
@@ -18,12 +19,11 @@ h1, h2, h3, h4, h5 {
   line-height: calc(0.75 * var(--ratio));
 }
 
-h1, .h1 { font-size: var(--s6) }
-h2, .h2 { font-size: var(--s5) }
-h3, .h3 { font-size: var(--s4) }
-h4, .h4 { font-size: var(--s3) }
-h5, .h5 { font-size: var(--s2) }
-h6, .h6 { font-size: var(--s1) }
+h1, .h1 { font-size: var(--s4) }
+h2, .h2 { font-size: var(--s3) }
+h3, .h3 { font-size: var(--s2) }
+h4, .h4 { font-size: var(--s1) }
+h5, .h5 { font-size: var(--s-1) }
 
 /* Buttons */
 ::-moz-focus-inner {
@@ -47,4 +47,10 @@ button {
 
 [tabindex="-1"]:focus {
   outline: none;
+}
+
+/* Hidden polyfill */
+
+[hidden] {
+  display: none;
 }
