--- a/css/lib/utilities.css
+++ b/css/lib/utilities.css
@@ -1,10 +1,4 @@
 /* Invert the colors of the component or element */
-.invert, [data-invert] {
+.invert, [invert] {
   filter: invert(100%);
 }
-
-/* Text alignment */
-
-.text-left, [data-text-left] { text-align: left }
-.text-right, [data-text-right] { text-align: right }
-.text-center, [data-text-center] { text-align: center }
