--- a/css/styles.css
+++ b/css/styles.css
@@ -10,5 +10,7 @@
 @import 'components/Grid.css';
 @import 'components/Stack.css';
 @import 'components/Spread.css';
+@import 'components/Cluster.css';
 @import 'components/Center.css';
+@import 'components/Screen.css';
 @import 'components/Comment.css';
