--- a/css/styles.css
+++ b/css/styles.css
@@ -13,4 +13,6 @@
 @import 'components/Cluster.css';
 @import 'components/Center.css';
 @import 'components/Screen.css';
+@import 'components/Drawer.css';
+@import 'components/Go.css';
 @import 'components/Comment.css';
