--- a/css/lib/utilities.css
+++ b/css/lib/utilities.css
@@ -1,4 +1,5 @@
 /* Invert the colors of the component or element */
-.invert, [invert] {
+.u-invert, [u-invert] {
   filter: invert(100%);
+  background-color: var(--color-light);
 }
