--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 @import 'components/Spread.css';
 @import 'components/Cluster.css';
 @import 'components/Center.css';
+@import 'components/Progress.css';
 @import 'components/Screen.css';
 @import 'components/Drawer.css';
 @import 'components/Go.css';
