--- a/css/lib/base.css
+++ b/css/lib/base.css
@@ -6,7 +6,7 @@ html {
   background-color: var(--color-light);
 }
 
-* {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   font-family: inherit;
@@ -16,6 +16,10 @@ html {
   border-style: solid;
   border-width: 0;
   scroll-behavior: smooth;
+}
+
+*::before, *::after {
+  content: '';
 }
 
 /* Headings */
