--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,4 @@
 @import 'components/Drawer.css';
 @import 'components/Go.css';
 @import 'components/Comment.css';
+@import 'components/Input.css';
