--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,4 @@
 @import 'components/Go.css';
 @import 'components/Comment.css';
 @import 'components/Input.css';
+@import 'components/Select.css';
