--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,5 @@
 @import 'components/Comment.css';
 @import 'components/Input.css';
 @import 'components/Select.css';
+@import 'components/Radios.css';
+@import 'components/Checkbox.css';
