--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -18,3 +18,6 @@
 @import 'components/Go.css';
 @import 'components/Comment.css';
 @import 'components/Input.css';
+@import 'components/Select.css';
+@import 'components/Radios.css';
+@import 'components/Checkbox.css';
