--- a/css/components/Radios.css
+++ b/css/components/Radios.css
@@ -16,6 +16,10 @@ r-adios .radio-radio {
   vertical-align: middle;
 }
 
+r-adios :focus + .radio-label .radio-radio {
+  outline: var(--outline);
+}
+
 r-adios :checked + .radio-label .radio-radio {
   background-color: var(--color-dark);
   box-shadow: inset 0 0 0 0.25rem var(--color-light);
