--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 @import 'components/Go.css';
 @import 'components/Comment.css';
 @import 'components/Input.css';
+@import 'components/Textarea.css';
 @import 'components/Select.css';
 @import 'components/Radios.css';
 @import 'components/Checkbox.css';
