--- a/bruck.njk
+++ b/bruck.njk
@@ -6,14 +6,7 @@
     <title>{{ pageTitle }}</title>
   </head>
   <body>
-    <h1>Here is a heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dicta corporis, ut eaque eum laudantium quisquam repudiandae inventore nobis obcaecati! Accusamus eaque blanditiis quidem, iste sed rerum provident libero perferendis?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, assumenda! Corporis dolores debitis expedita labore. Maxime omnis minima iure vero quaerat voluptates quam iusto, ex odio quia nesciunt suscipit consequuntur!</p>
-    <h2>Subheading</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolore itaque! Placeat vel et quasi veniam unde facilis voluptas? Cumque porro officiis obcaecati dignissimos voluptates? Ut aut eligendi tempora quod.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ducimus, impedit quae aut quod itaque cumque vero mollitia et animi adipisci asperiores maiores aperiam cum, optio quis velit vel dicta.</p>
-    <h3>Subheading</h3>
-    <p>Placeat vel et quasi veniam unde facilis voluptas? Cumque porro officiis obcaecati dignissimos voluptates? Ut aut eligendi tempora quod.</p>
+    <t-riangle></t-riangle>
     <script type="module">
       {% for module in manifest.modules %}import { {{ module.exports[0].name }} } from './js/{{ module.path }}'; {% endfor %}
       {% for module in manifest.modules %}{% set name = module.exports[0].name %}{% set tagName = module.declarations[0].tagName %}{% if tagName %}customElements.define('{{tagName}}', {{name}}); {% endif %}{% endfor %}
