--- a/bruck.njk
+++ b/bruck.njk
@@ -6,7 +6,16 @@
     <title>{{ pageTitle }}</title>
   </head>
   <body>
-    <t-riangle></t-riangle>
+    <g-rid items="center">
+      <t-riangle aspectratio="1/2"></t-riangle>
+      <t-riangle></t-riangle>
+      <t-riangle aspectratio="3/2"></t-riangle>
+      <t-riangle></t-riangle>
+      <t-riangle aspectratio="16/9"></t-riangle>
+      <t-riangle></t-riangle>
+      <t-riangle aspectratio="1/2"></t-riangle>
+      <t-riangle></t-riangle>
+    </g-rid>
     <script type="module">
       {% for module in manifest.modules %}import { {{ module.exports[0].name }} } from './js/{{ module.path }}'; {% endfor %}
       {% for module in manifest.modules %}{% set name = module.exports[0].name %}{% set tagName = module.declarations[0].tagName %}{% if tagName %}customElements.define('{{tagName}}', {{name}}); {% endif %}{% endfor %}
