cluster and stack components

--- a/bruck.njk
+++ b/bruck.njk
@@ -6,8 +6,21 @@
     <title>{{ pageTitle }}</title>
   </head>
   <body>
-    <c-enter>
-      <g-rid items="center">
+    <s-tack>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
+      <s-tack gap="3rem">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
+      </s-tack>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
+    </s-tack>
+    <c-luster justify="flex-end">
+      <button>Confirm</button>
+      <button>Cancel</button>
+    </c-luster>
+    <c-enter max="50rem">
+      <g-rid>
         <t-riangle aspectratio="1/2"></t-riangle>
         <s-tar aspectRatio="16/9"></s-tar>
         <p-olygon sides="7" aspectratio="3/2"></p-olygon>
