further layout components

--- a/bruck.njk
+++ b/bruck.njk
@@ -6,6 +6,14 @@
     <title>{{ pageTitle }}</title>
   </head>
   <body>
+    <s-idebar sideWidth="10rem">
+      <div slot="start">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est unde laborum non ullam facilis culpa rem vitae natus eos, nisi numquam quia quas eveniet blanditiis et? Sequi ipsa tempora corporis.</p>
+      </div>
+      <div slot="end">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ad quae, non, laborum aut molestias deleniti eos, vero nemo similique rem tenetur eius suscipit dolores! Asperiores a magni impedit porro.</p>
+      </div>
+    </s-idebar>
     <s-tack>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum provident quos perferendis eius, hic quae accusantium voluptate magnam suscipit, qui illo saepe beatae recusandae? Pariatur quos cupiditate tenetur sint ducimus.</p>
@@ -17,7 +25,9 @@
     </s-tack>
     <c-luster justify="flex-end">
       <button>Confirm</button>
-      <button>Cancel</button>
+      <r-epel from="left">
+        <button>Cancel</button>
+      </r-epel>
     </c-luster>
     <c-enter max="50rem">
       <g-rid>
