--- a/bruck.njk
+++ b/bruck.njk
@@ -6,6 +6,14 @@
     <title>{{ pageTitle }}</title>
   </head>
   <body>
+    <template id="fucko">
+      <s-tack>
+        <p>piss</p>
+        <p>shit</p>
+        <p>fuck</p>
+      </s-tack>
+    </template>
+    <c-lone of="fucko"></c-lone>
     <s-idebar sideWidth="10rem">
       <div slot="start">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est unde laborum non ullam facilis culpa rem vitae natus eos, nisi numquam quia quas eveniet blanditiis et? Sequi ipsa tempora corporis.</p>
