--- a/css/lib/elements.css
+++ b/css/lib/elements.css
@@ -1,13 +1,18 @@
 :root {
   color: var(--color-fore);
   background-color: var(--color-back);
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: var(--font-stack);
   line-height: 1.5;
   font-size: clamp(100%, 1rem + 0.5vw, 1.5rem);
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+:focus, ::part(button):focus, ::part(button).selected {
+  outline: 0.125rem dashed var(--color-fore);
+  outline-offset: 0.25rem;
 }
 
 body, h1, h2, h3, h4, h5, p, ul, ol, li, dl, 
@@ -18,8 +23,15 @@ pre, input {
   overflow-wrap: break-word;
 }
 
-button, input, textarea, select {
+button, ::part(button) {
   font: inherit;
+  line-height: 1;
+  border: 0;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0.5rem;
+  color: var(--color-back);
+  background-color: var(--color-fore);
 }
 
 img, picture, video, canvas, svg {
@@ -29,4 +41,12 @@ img, picture, video, canvas, svg {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.125;
+}
+
+[popover], ::part(popover) {
+  background-color: var(--color-back);
+  color: var(--color-fore);
+  padding: 0.5rem;
+  border: 0.125rem dashed;
+  inset: 1.5rem;
 }
